# MC_RecipesLister

./: .gitignore  CMakeLists.txt  README.md  main.cpp
aaaaaaaaaaaaaaaaa/: aaaaaaaaaaaaaaaaa.sln  aaaaaaaaaaaaaaaaa.vcxproj  nmsl.km  源.cpp
aaaaaaaaaaaaaaaaa/x64/Debug/: aaaaaaaaaaaaaaaaa.exe.recipe  aaaaaaaaaaaaaaaaa.ilk  aaaaaaaaaaaaaaaaa.vcxproj.FileListAbsolute.txt  test.json  vc143.idb
aaaaaaaaaaaaaaaaa/x64/Debug/aaaaaaaa.94921170.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  aaaaaaaaaaaaaaaaa.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
